2127: Revert to default OS scrollbars and fix overlapping shadow.

--- a/media/src/css/subtitle-editor/subtitle-editor.scss
+++ b/media/src/css/subtitle-editor/subtitle-editor.scss
@@ -73,9 +73,9 @@ $CodePro: 'CodeProLC', $OpenSans;
     content: "";
     display: block;
     height: 40px;
-    left: 0;
+    right: 15px;
     position: absolute;
-    width: 100%;
+    width: 95%;
     z-index: 51;
     @include vertical-gradient(rgba(#F3F4F5, 1), rgba(white, 0));
 }
@@ -360,18 +360,6 @@ section.main {
     word-spacing: -3px;
     * {
         word-spacing: normal;
-    }
-
-    ::-webkit-scrollbar {
-        -webkit-appearance: none;
-        width: 12px;
-    }
-    ::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1); 
-    }
-    ::-webkit-scrollbar-thumb {
-        border-radius: 5px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4); 
     }
 
     .column {
